# microservices-monitor

./: main.py  pyproject.toml
api/: main.py  routes.py  websockets.py
collector/: docker_collector.py  log_collector.py  process_collector.py
core/: aggregator.py  alert_engine.py  models.py
