[project]
name = "mmv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "plotly>=6.8.0",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "python-telegram-bot>=22.7",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]
